[package]
name = "upbase"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["upbase", "client"]
description = "Upbase Client"
repository = "https://github.com/apibillme/upbase-client"
homepage = "https://upbase.dev"
readme = "README.md"

[dependencies]
